# startup-auditor

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/startup_auditor/: __init__.py  cli.py  config.py  exceptions.py  exit_codes.py  types.py
src/startup_auditor/analyzers/: __init__.py
src/startup_auditor/detectors/: __init__.py
src/startup_auditor/reporters/: __init__.py
src/startup_auditor/scrapers/: __init__.py  base.py  network_interceptor.py  playwright_scraper.py  rate_limiter.py
tests/: conftest.py  test_cli.py  test_config.py  test_e2e_exit_codes.py  test_exit_codes.py
tests/scrapers/: __init__.py  test_network_interceptor.py  test_playwright_scraper.py  test_rate_limiter.py
